[gd_scene load_steps=43 format=3 uid="uid://du0dcmxntigrc"]

[ext_resource type="Script" path="res://Minigames/MG_Build_EmTent/MG_Bridge.gd" id="1_kjlty"]
[ext_resource type="Texture2D" uid="uid://b1dq0fq7j8ubi" path="res://asset/Bridge_MG.png" id="2_l5m0m"]
[ext_resource type="AudioStream" uid="uid://qtyune2unelb" path="res://asset/Soundtrack/Minigame_4.mp3" id="3_3do2u"]
[ext_resource type="Texture2D" uid="uid://8kbxhcnxgloa" path="res://asset/Tenda_emergency/action_bar_bg.png" id="5_ara0s"]
[ext_resource type="Script" path="res://Minigames/MG_Build_EmTent/Actionable_platform.gd" id="7_12bsp"]
[ext_resource type="Texture2D" uid="uid://d2ykcjrbd0y3u" path="res://asset/Tenda_emergency/moving_platform.png" id="8_8ttjn"]
[ext_resource type="Script" path="res://Minigames/lifes.gd" id="10_78ed0"]
[ext_resource type="PackedScene" uid="uid://bbcp8hmccldcb" path="res://player/life.tscn" id="11_ckfye"]
[ext_resource type="Texture2D" uid="uid://cic1cd7yvd8ks" path="res://asset/MenuButton/Help_idle.png" id="12_icai3"]
[ext_resource type="Texture2D" uid="uid://cbamxnbsoaivk" path="res://asset/MenuButton/Help_pressed.png" id="13_rg7j0"]
[ext_resource type="Texture2D" uid="uid://cwsi81nu6qhne" path="res://asset/MenuButton/Back B.png" id="14_gk66n"]
[ext_resource type="Texture2D" uid="uid://d3j1ap1c1m6ew" path="res://asset/MenuButton/Back A.png" id="15_4eyij"]
[ext_resource type="PackedScene" uid="uid://div6tgqs38lwg" path="res://Minigames/tutorial_ui.tscn" id="16_88trq"]
[ext_resource type="Script" path="res://Minigames/MG_Build_EmTent/tutorial_coll.gd" id="17_swpjo"]
[ext_resource type="Texture2D" uid="uid://0pb35ag16hme" path="res://asset/Order_Bubble.png" id="18_vyk87"]
[ext_resource type="Texture2D" uid="uid://bvdk2qgc6j8dt" path="res://asset/Tenda_emergency/yellow_bar.png" id="19_dxjyc"]
[ext_resource type="AudioStream" uid="uid://lu44q6qacyis" path="res://asset/sfx/Button sounds.mp3" id="22_cl102"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wgj6k"]
atlas = ExtResource("2_l5m0m")
region = Rect2(6720, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_kobyg"]
atlas = ExtResource("2_l5m0m")
region = Rect2(5760, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_oge47"]
atlas = ExtResource("2_l5m0m")
region = Rect2(4800, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp8pq"]
atlas = ExtResource("2_l5m0m")
region = Rect2(3840, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vdoh"]
atlas = ExtResource("2_l5m0m")
region = Rect2(2880, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubdcp"]
atlas = ExtResource("2_l5m0m")
region = Rect2(1920, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwmjc"]
atlas = ExtResource("2_l5m0m")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfg1f"]
atlas = ExtResource("2_l5m0m")
region = Rect2(0, 0, 960, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_qo2tk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgj6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kobyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oge47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp8pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vdoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubdcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwmjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfg1f")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_cpvf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(305, 587)]
}

[sub_resource type="Animation" id="Animation_65ajn"]
resource_name = "move_right_left"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(305, 587), Vector2(822, 587), Vector2(314, 587)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etvgw"]
_data = {
"RESET": SubResource("Animation_cpvf8"),
"move_right_left": SubResource("Animation_65ajn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eur33"]
size = Vector2(18, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4s52"]
size = Vector2(100, 40)

[sub_resource type="Animation" id="Animation_emt1r"]
resource_name = "positioning"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-250, -60), Vector2(250, -60), Vector2(-250, -60)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cvtdx"]
_data = {
"positioning": SubResource("Animation_emt1r")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0qn78"]
atlas = ExtResource("2_l5m0m")
region = Rect2(6720, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2glc"]
atlas = ExtResource("2_l5m0m")
region = Rect2(5760, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_6n708"]
atlas = ExtResource("2_l5m0m")
region = Rect2(4800, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_edufr"]
atlas = ExtResource("2_l5m0m")
region = Rect2(3840, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e4l0"]
atlas = ExtResource("2_l5m0m")
region = Rect2(2880, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq3u4"]
atlas = ExtResource("2_l5m0m")
region = Rect2(1920, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_eybeo"]
atlas = ExtResource("2_l5m0m")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2dhu"]
atlas = ExtResource("2_l5m0m")
region = Rect2(0, 0, 960, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_3l0c2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qn78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2glc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n708")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edufr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e4l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq3u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eybeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2dhu")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Mg_Bridge" type="Node2D"]
script = ExtResource("1_kjlty")

[node name="Sprite_tent" type="AnimatedSprite2D" parent="."]
position = Vector2(575, 320)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_qo2tk")

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2(0.1, 0.1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(563, 591)
scale = Vector2(5.36735, 4.31818)
texture = ExtResource("5_ara0s")

[node name="press_button" type="Button" parent="."]
offset_left = 387.0
offset_top = 430.0
offset_right = 737.0
offset_bottom = 509.0
text = "Press at the right time to complete the build"

[node name="platform_target_container" type="Node2D" parent="."]

[node name="Actionable_platform" type="Node2D" parent="."]
position = Vector2(305, 587)
scale = Vector2(0.5, 1)
script = ExtResource("7_12bsp")

[node name="Sprite2D" type="Sprite2D" parent="Actionable_platform"]
position = Vector2(-1, 0)
scale = Vector2(0.32, 0.81)
texture = ExtResource("8_8ttjn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Actionable_platform"]
libraries = {
"": SubResource("AnimationLibrary_etvgw")
}

[node name="Area2D" type="Area2D" parent="Actionable_platform" groups=["actionable_platform"]]

[node name="collision_ac_plat" type="CollisionShape2D" parent="Actionable_platform/Area2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_eur33")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 96.0
metadata/_edit_use_anchors_ = true

[node name="Success" type="Label" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = 248.5
offset_right = 107.5
offset_bottom = 303.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Rescued"
horizontal_alignment = 1

[node name="lifes" type="Node" parent="CanvasLayer/Control"]
script = ExtResource("10_78ed0")

[node name="life3" parent="CanvasLayer/Control/lifes" instance=ExtResource("11_ckfye")]
position = Vector2(177, 114)

[node name="life2" parent="CanvasLayer/Control/lifes" instance=ExtResource("11_ckfye")]
position = Vector2(108, 114)

[node name="life1" parent="CanvasLayer/Control/lifes" instance=ExtResource("11_ckfye")]
position = Vector2(39, 114)

[node name="Help" type="TextureButton" parent="CanvasLayer"]
offset_left = 1070.0
offset_top = 10.0
offset_right = 1390.0
offset_bottom = 330.0
scale = Vector2(0.23, 0.23)
size_flags_horizontal = 0
texture_normal = ExtResource("12_icai3")
texture_pressed = ExtResource("13_rg7j0")
metadata/_edit_use_anchors_ = true

[node name="Back" type="TextureButton" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 330.0
offset_bottom = 330.0
scale = Vector2(0.23, 0.23)
size_flags_horizontal = 0
texture_normal = ExtResource("14_gk66n")
texture_pressed = ExtResource("15_4eyij")
metadata/_edit_use_anchors_ = true

[node name="tutorial_ui" parent="CanvasLayer" instance=ExtResource("16_88trq")]
process_mode = 2
visible = false
position = Vector2(576, 324)
script = ExtResource("17_swpjo")

[node name="okay" type="Button" parent="CanvasLayer/tutorial_ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = 201.5
offset_right = 34.5
offset_bottom = 237.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Okay !"
metadata/_edit_use_anchors_ = true

[node name="Interactibles" type="Label" parent="CanvasLayer/tutorial_ui"]
anchors_preset = -1
anchor_left = 0.28125
anchor_top = 0.549383
anchor_right = 0.429688
anchor_bottom = 0.699074
offset_left = -274.0
offset_top = 30.0
offset_right = 115.0
offset_bottom = 182.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Jembatan

Kamu dapat menggunakan jembatan ini jika telah berhasil
menekan tombol di waktu yang tepat sebanyak 8 kali"
metadata/_edit_use_anchors_ = true

[node name="Game Goal" type="Label" parent="CanvasLayer/tutorial_ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.5
offset_top = -245.5
offset_right = 338.5
offset_bottom = -124.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Membangun Jembatan

Setelah berhasil mengumpulkan material, Rizki dapat memulai pembangunan jembatan.
Jembatan yang dibangun akan membuka akses pada area selanjutnya. 
Tekan tombol ketika garis menyentuh area hijau."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="OrderBubble" type="Sprite2D" parent="CanvasLayer/tutorial_ui"]
visible = false
position = Vector2(48, -42)
scale = Vector2(0.2725, 0.295)
texture = ExtResource("18_vyk87")

[node name="now" type="Label" parent="CanvasLayer/tutorial_ui"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -58.0
offset_right = 70.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "tekan 
Sekarang
"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/tutorial_ui"]
position = Vector2(0, -60)
scale = Vector2(5.367, 2)
texture = ExtResource("5_ara0s")

[node name="Area2D" type="Area2D" parent="CanvasLayer/tutorial_ui"]
position = Vector2(0, -58)
scale = Vector2(1, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/tutorial_ui/Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_a4s52")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/tutorial_ui/Area2D"]
modulate = Color(0.235294, 1, 0, 1)
texture = ExtResource("19_dxjyc")

[node name="Actionable_platform" type="Area2D" parent="CanvasLayer/tutorial_ui"]
position = Vector2(231.416, -60)
scale = Vector2(1, 0.7)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/tutorial_ui/Actionable_platform"]
position = Vector2(-1, 0)
scale = Vector2(0.32, 0.81)
texture = ExtResource("8_8ttjn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/tutorial_ui/Actionable_platform"]
libraries = {
"": SubResource("AnimationLibrary_cvtdx")
}
autoplay = "positioning"

[node name="collision_ac_plat" type="CollisionShape2D" parent="CanvasLayer/tutorial_ui/Actionable_platform"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_eur33")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/tutorial_ui"]
position = Vector2(-392, 124)
scale = Vector2(0.215833, 0.215833)
sprite_frames = SubResource("SpriteFrames_3l0c2")
autoplay = "default"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("3_3do2u")
volume_db = -8.0
autoplay = true
bus = &"Music"

[node name="button_sounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_cl102")
volume_db = 1.874

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="press_button" to="." method="_on_press_button_pressed"]
[connection signal="pressed" from="press_button" to="Actionable_platform" method="_on_press_button_pressed"]
[connection signal="area_entered" from="Actionable_platform/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Actionable_platform/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="pressed" from="CanvasLayer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="CanvasLayer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/tutorial_ui/okay" to="." method="_on_okay_pressed"]
[connection signal="area_entered" from="CanvasLayer/tutorial_ui/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CanvasLayer/tutorial_ui/Area2D" to="." method="_on_area_2d_area_exited"]

[editable path="CanvasLayer/Control/lifes/life1"]
